# cyrilcc

./: .clang-tidy  .gitignore  AST_node.md  CMakeLists.txt  README.md  asm_format.md  meson.build  run_compiler_test.sh  test.sh  test_input  todo.md
.cache/clangd/index/: ast.cpp.52ACAFB09F31776A.idx  ast.hpp.48BAC382AD6B17B9.idx  main.c.8F8135CA419E497F.idx  main.cpp.154ED99BD8D7E941.idx  symbol.cpp.53934631D926F5A4.idx  symbol.h.ADBD3E54ECE322EE.idx  symbol.hpp.D010C615D81F5698.idx
.zed/: debug.json  tasks.json
asm-machine/: machine  test.sh
docs/: AST_node.md  IR_format.md  asm_format.md
src/: asm_gen.cpp  asm_gen.hpp  ast.cpp  ast.hpp  ir.cpp  ir.hpp  ir_dumper.cpp  lexer.l  main.cpp  parser.y  pass.hpp  symbol.cpp  symbol.hpp  type.hpp
src/pass/: GVNPass.hpp  deSSA.hpp  dom_analysis.hpp  licm.hpp  mem2reg.hpp  sccp.hpp
test/asm-machine/: asm  asm.l.c  input.s
test/basic/: all.m
test/optimized/: sccp.m  twlm.m
test/testcase/: arr-while.m  arr-while.out  char-int.out  char.out  for-bc.m  for-bc.out  if.out  int.out  ptr-char.out  ptr-int.out  struct.out  while-bc.m  while-bc.out
